[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/UI/Fonts/kenvector_future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Custom/button-3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Custom/19143294.jpg" type="Texture" id=3]
[ext_resource path="res://Assets/Custom/medal2.png" type="Texture" id=4]
[ext_resource path="res://UI/LevelEnd.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="LevelEnd" type="PopupPanel"]
pause_mode = 2
self_modulate = Color( 1, 1, 1, 0.623529 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.32549 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
texture = ExtResource( 3 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1268.0
margin_bottom = 692.0
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 1248.0
margin_bottom = 275.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
text = "Game Over
"
align = 1
valign = 1

[node name="ButtonContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 279.0
margin_right = 1248.0
margin_bottom = 579.0
rect_min_size = Vector2( 1240, 300 )
custom_constants/margin_right = 470
custom_constants/margin_left = 470

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ButtonContainer"]
margin_left = 470.0
margin_right = 778.0
margin_bottom = 300.0
custom_constants/separation = 20
alignment = 1

[node name="MedalContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ButtonContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 308.0
margin_bottom = 130.0
rect_min_size = Vector2( 308, 100 )
alignment = 1

[node name="Medal0" type="TextureRect" parent="MarginContainer/VBoxContainer/ButtonContainer/VBoxContainer/MedalContainer"]
margin_right = 100.0
margin_bottom = 100.0
texture = ExtResource( 4 )

[node name="Medal1" type="TextureRect" parent="MarginContainer/VBoxContainer/ButtonContainer/VBoxContainer/MedalContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
texture = ExtResource( 4 )

[node name="Medal2" type="TextureRect" parent="MarginContainer/VBoxContainer/ButtonContainer/VBoxContainer/MedalContainer"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 100.0
texture = ExtResource( 4 )

[node name="NextButton" type="TextureButton" parent="MarginContainer/VBoxContainer/ButtonContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 308.0
margin_bottom = 270.0
rect_min_size = Vector2( 300, 120 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ButtonContainer/VBoxContainer/NextButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -5.0
margin_bottom = -5.0
custom_fonts/font = SubResource( 2 )
text = "<?>"
align = 1
valign = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/VBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
